--- a/tool.adoc
+++ b/tool.adoc
@@ -41,24 +41,9 @@ I'll cover abstractions now.
 include::tool-accept-iface.adoc[]
 include::tool-return-struct.adoc[]
 
-// TODO: accept interfaces, return structs as a practice
-
 = Tools for future-proofing
 
-[.medium, cols=">.^2h,^3,^3", frame=none]
-|====
-| | Input | Output
-
-.2+| Functions
-| Parameter Objects
-| Result Objects
-2.+^d| Functional options
-
-| Abstractions
-| Accept interfaces
-| Return structs
-
-|====
+include::expansion-table.adoc[]
 
 [.notes]
 --
