--- a/expand-results.adoc
+++ b/expand-results.adoc
@@ -1,108 +1,70 @@
-[%auto-animate]
+[%auto-animate%auto-animate-restart.columns]
 = Result objects
 
+[.column.medium, data=id=list]
+--
+Put the outputs into a struct
+--
+
+
+[.column.medium]
 [source%linenums,go,data-id=list]
-----
-func ListPage() (items []*Item, continueAt ItemID, err error) {
-  /* ... */
-}
-----
-
-[.notes]
---
-Result objects.
-These are the return value analog of parameter objects.
-
-If you're producing too many results from a function...
---
-
-[%auto-animate.columns]
-== Result objects
-
-[.column.is-half]
---
-[source%linenums,go,data-id=list]
-----
-func ListPage() (*ListPageResult, error) {
-  /* ... */
-}
-----
---
-
-[.column.is-half]
---
-[source%linenums,go,data-id=result]
 ----
 type ListPageResult struct {
   Items      []*Item
   ContinueAt ItemID
 }
+
+func ListPage(from *ItemID) (*ListPageResult, error) {
+  /* ... */
+}
 ----
---
 
 [.notes]
 --
-...put them in a struct.
+Result objects are the same idea, but for return values.
+If you expect to produce more outputs in the future,
+put them in a struct and return that instead.
 
-You can add new results as necessary.
-
-For example, if I wanted to start reporting
-the total number of items remaining in this listing...
+You can produce new outputs without disrupting callers.
 --
 
 [%auto-animate.columns]
 == Result objects
 
-[.column.is-half]
+[.column, data=id=list]
 --
-[source%linenums,go,data-id=list]
-----
-func ListPage() (*ListPageResult, error) {
-  /* ... */
-}
-----
+Put the outputs into a struct
+
+[%step.medium]
+* Use for >2 returns +
+  [.step.medium]#not counting `error`#
+* Obvious field names
 --
 
-[.column.is-half]
---
-[source%linenums,go,data-id=result]
+[.column.medium]
+[source%linenums,go,data-id=list]
 ----
 type ListPageResult struct {
   Items      []*Item
   ContinueAt ItemID
   Remaining  int
 }
+
+func ListPage(from *ItemID) (*ListPageResult, error) {
+  /* ... */
+}
 ----
---
 
 [.notes]
 --
-I can just add a field for that.
---
-
-[.columns]
-== Using result objects
-
-[.column.text-center]
-Use for >2 returns +
-[.step.medium]#not counting `error`#
-
-[.column.text-center]
-Readable field names
-
-[.notes]
---
-As with result objects, some tips:
-
-* These are a good idea for functions that produce
-  more than two results (*step*)
-  not counting the `error` return.
-* Use the field names of your result objects
-  to enforce reasonable/readable usage of your return values.
-** In my example above, before I switched to result objects,
-   I was using named returns for documentation.
-   It's going to be easy for a caller to accidentally
-   stick that into a variable named "tmp" and confuse their readers.
-** The name of the field leaves no confusion for readers
-   as to what this is.
+* (*step*) Result objects are a good idea
+  for functions that want to return more than two outputs
+  (*step*) not counting the error.
+* (*step*) Use the field names effectively.
+  In result objects, the field names are a great lever
+  to control how code that consumes this looks.
+  Code that consumes the result object becomes more readable
+  just because they *have* to use the name you chose
+  for the field.
 --
